Put recipe links in a list

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/butterscotch-budino.html">Butterscotch Budino</a>
+    <ul>
+        <li><a href="./recipes/butterscotch-budino.html">Butterscotch Budino</a></li>
+        <li><a href="./recipes/basic-crepes.html">Basic Crêpes</a></li>
+        <li><a href="./recipes/pork-schnitzel">Pork Schnitzel</a></li>
+    </ul>
 </body>
 
 </html>
