Create recipes' pages

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
         <li><a href="./recipes/butterscotch-budino.html">Butterscotch Budino</a></li>
         <li><a href="./recipes/basic-crepes.html">Basic Crêpes</a></li>
-        <li><a href="./recipes/pork-schnitzel">Pork Schnitzel</a></li>
+        <li><a href="./recipes/pork-schnitzel.html">Pork Schnitzel</a></li>
     </ul>
 </body>
 
