Add image for the recipes

--- a/recipes/basic-crepes.html
+++ b/recipes/basic-crepes.html
@@ -9,6 +9,8 @@
 
 <body>
     <h1>Basic Crêpes</h1>
+    <img src="../images/basic-crepe.jpg">
+    <h2>This simple but delicious crêpe recipe can be made in minutes from ingredients that everyone has on hand.</h2>
 </body>
 
 </html>
