--- a/recipes/pork-schnitzel.html
+++ b/recipes/pork-schnitzel.html
@@ -9,6 +9,9 @@
 
 <body>
     <h1>Pork Schnitzel</h1>
+    <img src="../images/pork-schnitzel.jpg">
+    <h2>To make German-style pork schnitzel, pork loin chops are pounded thin, breaded, and quickly pan fried until
+        crisp and delicious.</h2>
 </body>
 
 </html>
