Add a description for the recipes

--- a/recipes/pork-schnitzel.html
+++ b/recipes/pork-schnitzel.html
@@ -12,6 +12,8 @@
     <img src="../images/pork-schnitzel.jpg">
     <h2>To make German-style pork schnitzel, pork loin chops are pounded thin, breaded, and quickly pan fried until
         crisp and delicious.</h2>
+    <p>German pork schnitzel is an easy recipe and it’s perfect for busy weeknights. The pork chops are pounded into
+        thin, tender cutlets which are breaded and sautéed, resulting in a crispy crust and juicy center.</p>
 </body>
 
 </html>
