--- a/recipes/basic-crepes.html
+++ b/recipes/basic-crepes.html
@@ -11,6 +11,8 @@
     <h1>Basic Crêpes</h1>
     <img src="../images/basic-crepe.jpg">
     <h2>This simple but delicious crêpe recipe can be made in minutes from ingredients that everyone has on hand.</h2>
+    <p>Crêpes are very thin pancakes. They can be served with a wide variety of sweet and savory fillings and toppings.
+        The breakfast staple dates back to at least 13th-century France.</p>
 </body>
 
 </html>
