Add ingredients for the recipes

--- a/recipes/basic-crepes.html
+++ b/recipes/basic-crepes.html
@@ -13,6 +13,15 @@
     <h2>This simple but delicious crêpe recipe can be made in minutes from ingredients that everyone has on hand.</h2>
     <p>Crêpes are very thin pancakes. They can be served with a wide variety of sweet and savory fillings and toppings.
         The breakfast staple dates back to at least 13th-century France.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 cup all-purpose flour</li>
+        <li>2 large eggs</li>
+        <li>½ cup milk</li>
+        <li>½ cup water</li>
+        <li>¼ teaspoon salt</li>
+        <li>2 tablespoons butter, melted</li>
+    </ul>
 </body>
 
 </html>
