--- a/recipes/pork-schnitzel.html
+++ b/recipes/pork-schnitzel.html
@@ -14,6 +14,15 @@
         crisp and delicious.</h2>
     <p>German pork schnitzel is an easy recipe and it’s perfect for busy weeknights. The pork chops are pounded into
         thin, tender cutlets which are breaded and sautéed, resulting in a crispy crust and juicy center.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>4 (5 ounce) boneless pork loin chops, trimmed</li>
+        <li>1 teaspoon table salt, divided</li>
+        <li>½ teaspoon black pepper, divided</li>
+        <li>¼ cup all-purpose flour</li>
+        <li>½ teaspoon garlic powder</li>
+        <li>½ teaspoon onion powder</li>
+    </ul>
 </body>
 
 </html>
