Set suitable size for images

--- a/recipes/pork-schnitzel.html
+++ b/recipes/pork-schnitzel.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Pork Schnitzel</h1>
-    <img src="../images/pork-schnitzel.jpg" alt="pork schnitzel">
+    <img src="../images/pork-schnitzel.jpg" alt="pork schnitzel" width="440" height="293">
     <h2>To make German-style pork schnitzel, pork loin chops are pounded thin, breaded, and quickly pan fried until
         crisp and delicious.</h2>
     <p>German pork schnitzel is an easy recipe and it’s perfect for busy weeknights. The pork chops are pounded into
