--- a/recipes/butterscotch-budino.html
+++ b/recipes/butterscotch-budino.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Butterscotch Budino</h1>
-    <img src="../images/butterscotch-budino-.jpg" alt="butterscotch budino">
+    <img src="../images/butterscotch-budino-.jpg" alt="butterscotch budino" width="440" height="293">
     <h2>This butterscotch budino is next-level !</h2>
     <p> I'm gonna show you my take on this amazing Italian custard pudding. Above and beyond that rich and decadent
         butterscotch flavor, the texture of this budino is unbelievable. To say it's smooth and luxurious doesn't come
