--- a/recipes/pork-schnitzel.html
+++ b/recipes/pork-schnitzel.html
@@ -42,6 +42,7 @@
             remaining 2 pork chops. Sprinkle cooked pork chops with remaining 1/4 teaspoon salt and thyme. Serve chops
             with lemon wedges.</li>
     </ol>
+    <a href="../index.html">Return to Home Page</a>
 </body>
 
 </html>
