--- a/recipes/basic-crepes.html
+++ b/recipes/basic-crepes.html
@@ -33,6 +33,7 @@
             a spatula around the edge of the skillet to loosen the crêpe; flip and cook until the other side has turned
             light brown, about 1 minute more. Serve hot.</li>
     </ol>
+    <a href="../index.html">Return to Home page</a>
 </body>
 
 </html>
